fixing api token

--- a/code/polina-starter.ipynb
+++ b/code/polina-starter.ipynb
@@ -38,9 +38,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "API_key = '251946ee5c84aca12a53f9939ac55039'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -51,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "url_1 = \"http://api.openweathermap.org/data/2.5/forecast?lat=18.990713&lon=73.116844&cnt=200&appid=98e027721603ca32cead5457312b406a\""
+    "#url_1 = \"http://api.openweathermap.org/data/2.5/forecast?lat=18.990713&lon=73.116844&cnt=200&appid=98e027721603ca32cead5457312b406a\""
    ]
   },
   {
@@ -63,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "response1 = requests.get(url_1)"
+    "#response1 = requests.get(url_1)"
    ]
   },
   {
@@ -75,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "json1 = response1.json()"
+    "#json1 = response1.json()"
    ]
   },
   {
@@ -117,8 +115,8 @@
     }
    ],
    "source": [
-    "data1 = json1['list']\n",
-    "data1[0]"
+    "#data1 = json1['list']\n",
+    "#data1[0]"
    ]
   },
   {
@@ -195,8 +193,8 @@
     }
    ],
    "source": [
-    "cities = pd.read_excel('cities_list.xlsx')\n",
-    "cities.head(3)"
+    "#cities = pd.read_excel('cities_list.xlsx')\n",
+    "#cities.head(3)"
    ]
   },
   {
@@ -302,44 +300,44 @@
    ],
    "source": [
     "#cities = pd.read_excel('cities_list.xlsx')\n",
-    "cities = [\"San Francisco\", \"Chicago\", \"Miami\", \"Austin\", \"New York\"]\n",
-    "maxtemp = []\n",
-    "mintemp = []\n",
-    "humidity = []\n",
-    "weather = []\n",
-    "windspeed = []\n",
-    "select_cities = []\n",
+    "#cities = [\"San Francisco\", \"Chicago\", \"Miami\", \"Austin\", \"New York\"]\n",
+    "#maxtemp = []\n",
+    "#mintemp = []\n",
+    "#humidity = []\n",
+    "#weather = []\n",
+    "#windspeed = []\n",
+    "#select_cities = []\n",
     "\n",
-    "for city_names in cities:\n",
+    "#for city_names in cities:\n",
     "    \n",
-    "    url = f'http://api.openweathermap.org/data/2.5/weather?q={city_names}&APPID={API_key}&units=imperial'\n",
+    "#    url = f'http://api.openweathermap.org/data/2.5/weather?q={city_names}&APPID={API_key}&units=imperial'\n",
     "    \n",
-    "    r = requests.get(url)\n",
+    "#    r = requests.get(url)\n",
     "    \n",
     "    #if (r.status_code == 200):\n",
     "        \n",
-    "    data = r.json()\n",
+    "#    data = r.json()\n",
     "        \n",
-    "    formatted_json = json.dumps(data, sort_keys = True, indent = 4)\n",
+    "#    formatted_json = json.dumps(data, sort_keys = True, indent = 4)\n",
     "\n",
-    "    select_cities.append(data['name'])\n",
+    "#    select_cities.append(data['name'])\n",
     "    #name = data['name']\n",
-    "    maxtemp.append(data['main']['temp_max'])\n",
-    "    mintemp.append(data['main']['temp_min'])\n",
-    "    humidity.append(data['main']['humidity'])\n",
-    "    weather.append(data['weather'][0]['description'])\n",
-    "    windspeed.append(data['wind']['speed'])\n",
+    "#    maxtemp.append(data['main']['temp_max'])\n",
+    "#    mintemp.append(data['main']['temp_min'])\n",
+    "#    humidity.append(data['main']['humidity'])\n",
+    "#    weather.append(data['weather'][0]['description'])\n",
+    "#    windspeed.append(data['wind']['speed'])\n",
     "        \n",
     "\n",
-    "cities_weather_df = pd.DataFrame()\n",
-    "cities_weather_df['Names'] = select_cities\n",
-    "cities_weather_df['Max_Temp'] = maxtemp\n",
-    "cities_weather_df['Min_Temp'] = mintemp\n",
-    "cities_weather_df['Humidity'] = humidity\n",
-    "cities_weather_df['Weather'] = weather\n",
-    "cities_weather_df['WindSpeed'] = windspeed\n",
+    "#cities_weather_df = pd.DataFrame()\n",
+    "#cities_weather_df['Names'] = select_cities\n",
+    "#cities_weather_df['Max_Temp'] = maxtemp\n",
+    "#cities_weather_df['Min_Temp'] = mintemp\n",
+    "#cities_weather_df['Humidity'] = humidity\n",
+    "#cities_weather_df['Weather'] = weather\n",
+    "#cities_weather_df['WindSpeed'] = windspeed\n",
     "\n",
-    "cities_weather_df  "
+    "#cities_weather_df  "
    ]
   },
   {
